--- a/info.plist
+++ b/info.plist
@@ -143,7 +143,7 @@
 				<key>escaping</key>
 				<integer>102</integer>
 				<key>script</key>
-				<string>./alfred-github-jump update</string>
+				<string>./alfred-timezone update</string>
 				<key>scriptargtype</key>
 				<integer>0</integer>
 				<key>scriptfile</key>
